--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>test page</title>
 </head>
 <body>
+    
     <div>
         <H1> Body Starts here... </H1>
        <div id="insidebody" >
-           
+           <a href="3rdpage.html"> go to 3rd page</a>  
            <p> <h2> Lorem ipsum dolor sit amet, </h2>consectetur adipiscing elit. Nulla ex nunc, viverra eget arcu viverra, rhoncus auctor purus. Nullam cursus nunc eros, nec malesuada lacus tristique ut. Maecenas dui turpis, pretium quis magna nec, semper viverra elit. Nullam imperdiet, mi eu semper tempus, lacus nulla euismod orci, at hendrerit tortor mauris at dui. Cras imperdiet justo et ipsum placerat, sit amet ultrices massa aliquam. Nullam scelerisque tellus non auctor rhoncus. Maecenas elementum magna nulla, ac porttitor dolor euismod quis. Nulla vel rutrum ipsum. Nam faucibus sem augue, eu consectetur eros ornare vitae. Duis nec felis dignissim, aliquet lectus at, pharetra elit. Curabitur posuere malesuada massa, et dapibus diam commodo sed.</p>
            <p> Pellentesque rhoncus et eros aliquam sagittis. Nullam tellus risus, semper vel ullamcorper nec, semper ut augue. Mauris interdum orci augue, quis tempor velit tristique non. Praesent eget mattis magna, eu egestas turpis. Suspendisse quis cursus ante, vitae ultrices nisl. Maecenas dapibus sodales eros, nec blandit sapien ornare in. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. In ac quam id leo varius pretium. Sed sed urna odio. Praesent eget suscipit tortor, vel iaculis elit. Proin quis arcu ipsum. Sed in posuere ipsum. Morbi egestas quam vel ante hendrerit, nec commodo nisl hendrerit. Etiam odio metus, porttitor quis nisi ac, cursus tempus odio. </p>
            <p> Quisque posuere tempor tortor, ac tristique odio bibendum luctus. Morbi dictum congue nulla, eget vestibulum velit interdum vel. Quisque non est sodales, convallis justo id, ultrices massa. Vestibulum cursus purus dui, quis hendrerit mauris interdum convallis. Cras rutrum facilisis facilisis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed vitae tristique magna. Curabitur luctus arcu ac turpis aliquam, non lobortis tellus pellentesque. Nulla facilisi. Suspendisse porttitor leo nisi, quis posuere felis placerat sit amet. Duis diam leo, interdum sit amet tellus non, vestibulum sodales arcu. Nam nec mi auctor, aliquam nibh eu, lobortis mauris. Donec iaculis diam in quam euismod, quis euismod quam rhoncus. Praesent a pellentesque nisl, nec porta mi. Nunc pretium maximus dictum. Proin commodo velit nec orci hendrerit, eu commodo tortor tempus. </p>
@@ -29,6 +32,9 @@
     <script src="1.js" ></script>
     <script src="2.js" ></script>
     <script src="3.js" ></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <footer>All rights resarved. Ashraful</footer>
 </body>
 </html>
